# proto-kit

./: Cargo.toml  README.md
.github/workflows/: ci-proto-fingerprint.yml  ci-rust-workspace.yml  publish-crates.yml  publish-proto-fingerprint.yml
proto-fingerprint/: Cargo.toml  README.md
proto-fingerprint/compat-configs/: README.zh.md  extract_buf_configs.sh
proto-fingerprint/compat-configs/examples/: README.md  lenient-mode.yaml  specific-rules.yaml  strict-mode.yaml  wire-only.yaml
proto-fingerprint/compat-configs/extracted/: EXTRACTION_SUMMARY.md
proto-fingerprint/docs/: buf-sync-guide.zh.md
proto-fingerprint/src/: main.rs
proto-fingerprint/src/compat/: test_migration.md
proto-fmt/: Cargo.toml  README.md
proto-fmt/src/: lib.rs  main.rs  merge.rs  text_gen.rs
proto-fmt/tests/: cli_integration.rs  merge_goal_verification.rs
