[package]
name = "proto-fingerprint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Semantic protocol buffer analysis tool for detecting breaking changes and computing fingerprints"
keywords = ["protobuf", "compatibility", "breaking-changes", "fingerprint", "analysis"]
categories = ["development-tools"]
include = [
    "src/**",
    "README.md",
    "compat-configs/examples/**",
    "Cargo.toml",
]

[[bin]]
name = "proto-fingerprint"
path = "src/main.rs"

[lib]
name = "proto_fingerprint"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.26.0"
clap = { version = "4.5.60", features = ["derive"] }
const_format = "0.2.35"
