[package]
name = "proto-fmt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Protobuf file normalization, merging and formatting tools"
keywords = ["protobuf", "formatting", "normalization", "proto"]
categories = ["development-tools"]

[[bin]]
name = "proto-fmt"
path = "src/main.rs"

[lib]
name = "proto_fmt"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
const_format = "0.2.35"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
